--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 /* Links */
 
 a {
@@ -11,6 +12,7 @@ a:hover {
   opacity:1;
 }
 
+
 /* Body */
 
 body {
@@ -19,6 +21,7 @@ body {
   margin:46px 0 46px 0;
   color:#FFF;
 }
+
 
 /* Background */
 
@@ -59,7 +62,6 @@ h1 {
   border-radius:inherit;
 }
 
-
 /* Stream */
 
 #stream {
@@ -75,7 +77,45 @@ h1 {
 }
 
 
+/* Submit */
+
+#submit{
+  margin-top:26px;
+  height:auto;
+  margin-bottom:26px;
+  padding-bottom:86px;
+  position:relative;
+  z-index:2;
+}
+
+.tweet {
+  width:100%;
+  font-size:18pt;
+  float:left;
+  padding: 10px;
+  border: solid 5px #c9c9c9;
+  -webkit-box-shadow: inset 0 0 0 1px #707070;
+  -moz-box-shadow: inset 0 0 0 1px #707070;
+  box-shadow: inset 0 0 0 1px #707070;
+  -webkit-transition: box-shadow 0.3s, border 0.3s;
+  -moz-transition: box-shadow 0.3s, border 0.3s;
+  -o-transition: box-shadow 0.3s, border 0.3s;
+  transition: box-shadow 0.3s, border 0.3s;
+}
+
+.tweet:focus{
+  border: solid 5px #969696;
+}
+
+.success {
+  margin:0 auto;
+  display:none;
+  padding-bottom:26px;
+}
+
+
 /* Timeline */
+
 #timeline {
   width:600px;
   position:relative;
@@ -83,7 +123,6 @@ h1 {
   display:none;
   z-index:2;
 }
-
 
 
 /* Post */
